--- a/index.html
+++ b/index.html
@@ -4,10 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio   - Paramjeet</title>
-    <link rel="stylesheet" href="style.css">
+    <title>About Paramjeet Kumar</title>
+    <link rel="stylesheet" href="css stylesheet.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <td><img width="230" height="300" src="paramjeet.jpg" alt="Paramjeet's Photo"></td>
+            <td><h1>Paramjeet Kumar Mahato</h1>
+                <p><h3><i>Student of B.Tech CSE (NITMAS)</i></h3></p>
+                <a href="#Education"> <p>Education Qualification</p></a>
+                <a href="#project"> <p>Project</p></a>
+                <a href="#contact"> <p>Connect With Me</p></a>
+            </td>
+        </tr>
+    </table>
+    <hr>
+    <h2 id="Education">Education Qualification</h2>
+    <table border="">
+        <tr>
+            <td>Institute</td>
+            <td>Board</td>
+            <td>Course</td>
+            <td>Passing Year</td>
+        </tr>
+        <tr>
+            <td>B.B.St.Thomas Memorial School</td>
+            <td>W.B.B.S.E.</td>
+            <td>Secondary Education</td>
+            <td>2019</td>
+        </tr>
+        <tr>
+            <td>B.B.St.Thomas Memorial School</td>
+            <td>W.B.C.H.S.E.</td>
+            <td>Higher Secondary Education</td>
+            <td>2021</td>
+        </tr>
+        <tr>
+            <td>NITMAS</td>
+            <td>MAKAUT</td>
+            <td>B.Tech CSE</td>
+            <td> </td>   
+        </tr>
+    </table>
+    <h2 id="project">Project</h2>
+    <ul>
+        <li>
+            <p><strong>Virtual Keyboard</strong></p>
+        </li>
+    </ul>
+    <h2>Interest</h2>
+    <ul>
+        <li>Playing Cricket</li>
+        <li>Playing Video Games</li>
+        <li>Coding</li>
+    </ul>
+    <h2 id="contact">Connect With Me</h2>
+    <ul>
+        <li>Email: <a href="mailto:mahatoparamjeet11@gmail.com"><i>mahatoparamjeet11@gmail.com</i></a></li>
+        <li>Instagram: <a target="_blank" href="https://www.instagram.com/mahato_ji_11"> <i>@mahato_ji_11</i></a></li>
+        <li>Linkedin: <a target="_blank" href="https://www.linkedin.com/in/paramjeet-kumar-mahato-946585242"><i>Paramjeet Kumar Mahato</i></a></li>
+        <li>Github: <a target="_blank" href="https://github.com/mahatoji11">mahatoji11</a></li>
+    </ul>
 </body>
 </html>
